# monorepo-bzl-javajug

./: .bazelignore  .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  bazel-bin  bazel-monorepo-bzl-javajug  bazel-out  bazel-testlogs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.in  requirements.txt  subset.bazelproject
.ijwb/: .project-artifact-dirs
go_service/: BUILD  main.go  main_test.go
java_service/: BUILD
java_service/src/main/java/com/example/: App.java
java_service/src/main/resources/: application-dev.properties  application-prod.properties
java_service/src/test/java/com/example/: AppTest.java
python_service/: BUILD  app.py  test_app.py
react_frontend/: BUILD  README.md  build_smoke_test.js  package.json
react_frontend/src/: BUILD
