# Transitive Maven artifact resolution and publishing rules for Bazel.
# https://github.com/bazel-contrib/rules_jvm_external
bazel_dep(name = "rules_jvm_external", version = "6.7")

# Go rules for Bazel
# https://github.com/bazel-contrib/rules_go
bazel_dep(name = "rules_go", version = "0.54.0")

# Gazelle build file generator
# https://github.com/bazel-contrib/bazel-gazelle
bazel_dep(name = "gazelle", version = "0.43.0")


# Python rules for Bazel
# https://github.com/bazel-contrib/rules_python
bazel_dep(name = "rules_python", version = "1.3.0")

# Rules for building and testing TypeScript and JavaScript code
# https://github.com/bazel-contrib/rules_nodejs
bazel_dep(name = "rules_nodejs", version = "6.3.4")