
# Java rules for Bazel
# https://github.com/bazelbuild/rules_java
bazel_dep(name = "rules_java", version = "8.11.0")

# Rules for testing Java code
# https://github.com/bazel-contrib/rules_jvm
bazel_dep(name = "contrib_rules_jvm", version = "0.28.0")

# Transitive Maven artifact resolution and publishing rules for Bazel.
# https://github.com/bazel-contrib/rules_jvm_external
bazel_dep(name = "rules_jvm_external", version = "6.7")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "org.springframework.boot:spring-boot-starter-web:3.4.4",

        # Test
        "org.springframework.boot:spring-boot-starter-test:3.4.4",
        "org.junit.platform:junit-platform-launcher:1.12.2",
        "org.junit.platform:junit-platform-reporting:1.12.2"


    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)

use_repo(maven, "maven")

# Spring Rules for Bazel
# https://github.com/salesforce/rules_spring
bazel_dep(name = "rules_spring", version = "2.6.3")

# Go rules for Bazel
# https://github.com/bazel-contrib/rules_go
bazel_dep(name = "rules_go", version = "0.54.0")

# Gazelle build file generator
# https://github.com/bazel-contrib/bazel-gazelle
bazel_dep(name = "gazelle", version = "0.43.0")


# Python rules for Bazel
# https://github.com/bazel-contrib/rules_python
bazel_dep(name = "rules_python", version = "1.3.0")

# Rules for building and testing TypeScript and JavaScript code
# https://github.com/bazel-contrib/rules_nodejs
bazel_dep(name = "rules_nodejs", version = "6.3.4")